# pkm

./: .gitignore  .gitmodules  87087724-0.json  AGENTS.md  CLAUDE.md  LEARNINGS.md  README.md  TODO.md  TODO_REFACTOR.md  battle.sh  flake.nix  justfile  main.py  plan.md  pyproject.toml  staples.json  submit.sh  train_loop.sh  treefmt.nix
agents/00_basic/metrics/: ppo_train.csv
agents/01_psychic/metrics/: ppo_train.csv
agents/02_dragapult/: deck.csv  profile.yaml
agents/02_dragapult/metrics/: ppo_train.csv
agents/03_pult_munki/: reward_weights.json
agents/03_pult_munki/metrics/: population_train.csv  ppo_train.csv  ppo_train_milestone8_pre_phase3_2026-07-20.csv  ppo_train_phase3_attempt1_2026-07-20.csv
agents/03_pult_munki_setup/metrics/: setup_train.csv
agents/04_mega_abomasnow/: reward_weights.json
agents/pool_361_metagross_metal_maker/: policy.npz
agents/pool_370_mega_greninja_ex/: reward_weights.json
darwinian_ml/: README.md  __init__.py  ablate.py  config.py  evaluate.py  evolve.py  evolve.sh  fitness.py  head2head.py  opponent.py  play_human.py  population.py  setup_diagnostic.py  setup_replays.py  setup_shootout.py  shaping.py
deck/: 00_basic.csv  00_basic.json  02_dragapult.json  04_mega_abomasnow.csv  pool_280_raging_bolt_ex.csv  pool_284_dragapult_ex.csv  pool_315_archaludon_ex.csv  pool_320_n_s_zoroark_ex.csv  pool_322_slowking_seek_inspiration.csv  pool_326_lillie_s_clefairy_ex.csv  pool_329_marnie_s_grimmsnarl_ex.csv  pool_332_cynthia_s_garchomp_ex.csv  pool_333_ethan_s_typhlosion.csv  pool_336_festival_lead.csv  pool_337_rocket_s_mewtwo_ex.csv  pool_339_ogerpon_box.csv  pool_341_crustle_mysterious_rock_inn.csv  pool_345_mega_lucario_ex.csv  pool_350_alakazam_powerful_hand.csv  pool_351_ogerpon_meganium.csv  pool_352_hydrapple_ex.csv  pool_353_mega_lopunny_ex.csv  pool_356_rocket_s_honchkrow.csv  pool_361_metagross_metal_maker.csv  pool_362_mega_starmie_ex.csv  pool_363_hop_s_trevenant.csv  pool_370_mega_greninja_ex.csv  pool_371_beedrill_ex.csv  pool_373_sylveon_safeguard.csv  pool_400_mega_abomasnow_ex.csv
docs/: ARCHITECTURE.md  ENGINE.md  GUIDE.md  REPLAY_VIEWER.md  RL_PLAN.md  TRAINING_AND_INFERENCE.md  TRAINING_AND_SUBMISSION.md  opponent-archetype-classifier-plan.md
docs/ideas/: README.md  agent-composition-and-refactor.md  general-agent-architecture.md  optimizers.md  rl-improvements.md  training-and-decision-pipeline.md  visualization-and-hpo.md
engine/: .clangd  CMakeLists.txt  REUSE.toml  flake.nix  game.vcxproj  game.vcxproj.filters  package.nix  treefmt.nix
engine/src/: All.h  Export.cpp
engine/src/api/: Api.h  ApiData.h  ApiJson.h  ToJson.h
engine/src/card/: Card.h  CardImpl.h  CardMove.h  CreateCard.h  InitializeCard.h  Skill.h
engine/src/core/: ApiType.h  ApiTypes.h  Binary.h  CardTypes.h  Core.h  EffectTypes.h  EnergyTypes.h  FixedList.h  Framework.h  JsonBuilder.h  TargetTypes.h  TriggerTypes.h  Types.h
engine/src/effects/: EffectContinual.h  EffectInstant.h  EffectProc.h
engine/src/game/: BattleData.h  Game.h  GameFunction.h  GameProc.h  GameUtil.h  PlayerState.h  State.h
engine/src/mechanics/: ActivateInfo.h  AddLog.h  AddOption.h  PullTrigger.h  SatisfyCondition.h  Search.h  SelectProc.h  SetProperty.h  SetupProc.h  TargetList.h
engine/torch-driver/: CMakeLists.txt  torch.nix
engine/torch-driver/src/: main.cpp
engine/torch-driver/src/rl/: README.md  engine.hpp  features.hpp  mcts.hpp  model.hpp  obs.hpp  sparse.hpp  train.cpp
metrics/: ppo_train.csv
notebooks/: training_monitor.ipynb
obs_data_structure/: OBSERVATION_SCHEMA.md  example_obs.json
pkm/: cli_deck.py  policy_setup.npz  search.py  train.py
pkm/agents/: __init__.py  base.py  dragapult_default_agent.py  dragapult_setup_agent.py  dragapult_setup_search_agent.py  factory.py  first_turn_agent.py  neural_agent.py  profile.py  random_agent.py  registry.py  singaporean_middleman.py  spec.py
pkm/archetype/: aliases.py  archetypes.py  belief.py  build_pool_deck.py  export.py  gen.py  model.py  numpy_model.py  scrape_decklist.py  train.py
pkm/cli/: __init__.py  agent.py  archetype.py  cards.py  deck.py
pkm/data/: __init__.py  card_data.py  deck.py
pkm/engine/: __init__.py  __main__.py  api.py  game.py  loader.py
pkm/heuristics/: context.py  deck_tracker.py
pkm/mcts/: __init__.py  agent.py  determinize.py  search.py
pkm/new_agents/: __init__.py  cli.py  train_cmd_log.md
pkm/rl/: __init__.py  attack_damage_estimator.py  deterministic_features.py  encoder.py  eval_vs_pool.py  exit_train.py  export.py  features.py  logging.py  model.py  numpy_policy.py  opponent_pool.py  parallel_rollout.py  play.py  population_train.py  ppo.py  reward_terms.py  rollout.py  setup_train.py  setup_turn_score.py  sweep.py  train.py
pkm/tui/: __init__.py  app.py  labels.py  session.py  widgets.py
pkm/types/: obs.py
pkm/web/: __init__.py  server.py
replay/: CARD_IMAGES.md  cards.json  fetch_card_images.py  ideas_and_recommendations.md  requirements.md
replay/02_vite_web_app/: index.html  package.json
replay/05_vite_react_app/: README.md  package-lock.json  package.json  vite.config.ts
replay/06_copy/: board_layout.html  ptcg.html
replay/07_vite_react_cards/: README.md  index.html  package.json  vite.config.ts
replay/card_images/: index.json
scripts/: analyze_matchup_replays.py  run_matchup_replays.py
tests/: test_agent_export.py  test_agent_factory.py  test_agent_profile.py  test_archetype_gen.py  test_archetype_head.py  test_archetype_integration.py  test_archetype_mcts.py  test_archetype_model.py  test_archetypes.py  test_attack_damage_estimator.py  test_card_data.py  test_deck_ledger.py  test_deck_tracker.py  test_engine_parity.py  test_feature_registry.py  test_game_context.py  test_labels.py  test_main.py  test_mcts.py  test_numpy_torch_parity.py  test_obs.py  test_population_train.py  test_profile_play.py  test_profile_training.py  test_rl.py  test_session.py  test_submission.py  test_tier1_features.py  test_tui_app.py
tests/fixtures/: capture_observations.py  encoder_golden.npz  observations.json
(+235 files in other folders)
