[project]
name = "pkm-new"
version = "0.1.0"
description = "Pokémon TCG AI Battle Challenge - Simulation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle-environments>=1.30.2",
    "numpy>=2.0",
    "pandas>=2.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "kaleido>=0.2.1",
    "nbformat>=5.0",
    "plotly>=5.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
