[project]
name = "pkm-new"
version = "0.1.0"
description = "Pokémon TCG AI Battle Challenge - Simulation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle-environments>=1.30.2",
    "numpy>=2.0",
    "pandas>=2.0",
    "pydantic>=2.13.4",
    "rice>=0.4",
    "textual>=8.2.8",
    "torch>=2.12.1",
    "typer>=0.26.8",
]

[project.scripts]
pkm = "pkm.cli:app"

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "kaleido>=0.2.1",
    "nbformat>=5.0",
    "plotly>=5.0",
    "pytest>=8.0",
    "ruff>=0.5",
    "tensorboard>=2.14",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkm"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
markers = ["slow: runs a full game through the real engine"]
