[project]
name = "pkm-new"
version = "0.1.0"
description = "Pokémon TCG AI Battle Challenge - Simulation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "kaggle-environments>=1.30.2",
    "numpy>=2.0",
    "pandas>=2.0",
    "pydantic>=2.13.4",
    "requests>=2.28.1",
    "rice>=0.4",
    "textual>=8.2.8",
    "torch>=2.12.1",
    "typer>=0.26.8",
]

[project.scripts]
pkm = "pkm.cli:app"

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "kaleido>=0.2.1",
    "nbformat>=5.0",
    "netron>=9.0",
    "onnx>=1.22",
    "onnxscript>=0.7",
    "optuna>=4.0",
    "plotly>=5.0",
    "pytest>=8.0",
    "ruff>=0.5",
    "tensorboard>=2.14",
    "torchinfo>=1.8",
    "torchview>=0.2.7",
    "torchviz>=0.0.3",
    "wandb>=0.18",
]

[tool.uv.sources]
# CUDA build on this box (linux + py3.12); CPU wheels everywhere else so the
# universal lock still resolves for other platforms / Python versions (CUDA
# wheels don't exist for win32 or every Python minor).
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' and python_version == '3.12'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' or python_version != '3.12'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkm"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
markers = ["slow: runs a full game through the real engine"]
